test(shared-space): add additional tests for shared-space